--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.11",
+    "@types/graphql": "^14.5.0",
     "@types/styled-components": "^5.1.7",
     "expo": "~40.0.0",
     "expo-splash-screen": "~0.8.0",
     "expo-updates": "~0.4.0",
+    "graphql": "^15.5.0",
     "pan-responder-hook": "^1.1.4",
     "prettier": "^2.2.1",
     "react": "16.13.1",
